# cpp-repo-template

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  LICENSE.md  conanfile.py  readme.md
code/: CMakeLists.txt  main.cpp
code/component/: CMakeLists.txt
code/component/impl/: greeter.cpp
code/component/inc/: greeter.h
test/: CMakeLists.txt  component_test.cpp
